// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabLinkFill renders 1`] = `
<a
  className="sc-yGKTs eaoqMA"
/>
`;

exports[`TabLinkFill renders Href 1`] = `
<a
  className="sc-yGKTs eaoqMA"
  href="www.google.com"
/>
`;

exports[`TabLinkFill renders count 1`] = `
<a
  className="sc-yGKTs eaoqMA"
>
  <span
    className="sc-dbbhXq itCiUH"
  >
    2
  </span>
</a>
`;

exports[`TabLinkFill renders element left 1`] = `
<a
  className="sc-yGKTs eaoqMA"
>
  <div
    className="sc-bvdFzt jXDhfx"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`TabLinkFill renders isTop 1`] = `
<a
  className="sc-yGKTs eaoqMA"
/>
`;

exports[`TabLinkFill renders size 1`] = `
<a
  className="sc-yGKTs ffvYky"
  size="small"
/>
`;
